Fix viewport size distortion on Android when interacting with tonconnect elements

--- a/src/styles/components/_grid.scss
+++ b/src/styles/components/_grid.scss
@@ -94,8 +94,7 @@ $center-menu-buttons-threshold: 1024px;
 }
 
 .custom-header {
-  width: 100%;
-  min-width: 100vw;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: space-between;
